RESOLVED FIXED183691
[LayoutReloaded] Should never need to go beyond the root container when asking for the containing block.
https://bugs.webkit.org/show_bug.cgi?id=183691
Summary [LayoutReloaded] Should never need to go beyond the root container when askin...
alan
Reported 2018-03-15 21:03:14 PDT
While laying out the boxes in a block formatting context, when we happen to need to get to the containing block, it should always be a descendant of the root container (or the root container itself). Nothing outside of the formatting context should be able to impact the boxes inside.
Attachments
Patch (7.00 KB, patch)
2018-03-15 21:06 PDT, alan
no flags
alan
Comment 1 2018-03-15 21:06:00 PDT
alan
Comment 2 2018-03-15 21:13:31 PDT
Radar WebKit Bug Importer
Comment 3 2018-03-15 21:14:26 PDT
Note You need to log in before you can comment on or make changes to this bug.